# Homework-C

./: 1.2.4.c  CMakeLists.txt  README.md  functions.c  functions.h  homework.c  homework.h  main.c
Homework 1/: Schema.md  functions.c  functions.h
Homework 2/: functions.c  functions.h
Homework 3/: functions.c  functions.h
Раздел 2/: 1.2.1.c
