cmake_minimum_required(VERSION 4.0)
project(Homework_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework_C
        .idea/.gitignore
        .idea/Homework-C.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        LICENSE
        "main.c"
        homework.c
        homework.h
        "Homework 1/functions.c"
        "Homework 1/functions.h"
        "Homework 2/functions.c"
        "Homework 2/functions.h"
        "Homework 3/functions.c"
        "Homework 3/functions.h"
)
